--- a/tracer-ui/src/index.html
+++ b/tracer-ui/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Sextant Tracer</title>
+    <title>daml-on-sawtooth Tracer</title>
     <meta name="viewport" content="user-scalable=0, initial-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/index.css">
-    <link rel="shortcut icon" type="image/png" href="/small-logo-blue.png" />
   </head>
   <body>
     <div id="root"></div>
